Refactor project structure and dependencies

--- a/23_reactjs/11_keeper_app_project_part1/package.json
+++ b/23_reactjs/11_keeper_app_project_part1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "11_keeper_app_project",
+  "name": "11_keeper_app_project_part1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
